syntax = "proto3";
package userpb;

service User {
  rpc Regist (RegistReq) returns (RegistResp) {}
  rpc Login (LoginReq) returns (LoginResp) {}
}

message RegistReq {
  string Username = 1;
  string Password = 2;
}

message RegistResp {
  string Message = 1;
}

message LoginReq {
  string Username = 1;
  string Password = 2;
}

message LoginResp {
  string Token = 1;
}